--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,156 @@
-echo "# Almeidarebuild" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/Henriquealmeida119/Almeidarebuild.git
-git push -u origin main
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Almeida Rebuild - Reformas & Construção</title>
+
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background: #111;
+            color: #fff;
+        }
+
+        header {
+            background: #000;
+            padding: 20px;
+            text-align: center;
+            font-size: 26px;
+            font-weight: bold;
+            letter-spacing: 2px;
+            animation: fadeIn 2s ease-in-out;
+        }
+
+        .hero {
+            text-align: center;
+            padding: 60px 20px;
+            background: #1a1a1a;
+            animation: slideDown 1.5s ease;
+        }
+
+        .hero h1 {
+            font-size: 40px;
+            margin-bottom: 10px;
+        }
+
+        .hero p {
+            font-size: 18px;
+            color: #ccc;
+        }
+
+        .btn {
+            margin-top: 20px;
+            background: white;
+            color: black;
+            padding: 12px 25px;
+            border-radius: 5px;
+            text-decoration: none;
+            font-weight: bold;
+            display: inline-block;
+            animation: pulse 2s infinite;
+        }
+
+        .section {
+            padding: 40px 20px;
+            text-align: center;
+        }
+
+        .services {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .card {
+            background: #1f1f1f;
+            padding: 20px;
+            border-radius: 10px;
+            transition: 0.3s;
+            animation: fadeIn 1.5s ease;
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+        }
+
+        footer {
+            margin-top: 40px;
+            text-align: center;
+            padding: 20px;
+            background: #000;
+            color: #aaa;
+        }
+
+        /* ANIMAÇÕES */
+        @keyframes fadeIn {
+            from {opacity: 0;}
+            to {opacity: 1;}
+        }
+
+        @keyframes slideDown {
+            from {transform: translateY(-40px); opacity: 0;}
+            to {transform: translateY(0); opacity: 1;}
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.07); }
+            100% { transform: scale(1); }
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    ALMEIDA REBUILD
+</header>
+
+<section class="hero">
+    <h1>Reformas, Construção e Acabamento</h1>
+    <p>Profissionalismo, qualidade e confiança para transformar seu lar.</p>
+    <a class="btn" href="https://wa.me/11948735494" target="_blank">
+        Solicitar Orçamento
+    </a>
+</section>
+
+<section class="section">
+    <h2>Nossos Serviços</h2>
+
+    <div class="services">
+        <div class="card">
+            <h3>Reformas em Geral</h3>
+            <p>Transformamos qualquer ambiente com qualidade e eficiência.</p>
+        </div>
+
+        <div class="card">
+            <h3>Pintura</h3>
+            <p>Trabalhamos com acabamento fino e pintura profissional.</p>
+        </div>
+
+        <div class="card">
+            <h3>Elétrica & Hidráulica</h3>
+            <p>Serviços técnicos com segurança e garantia.</p>
+        </div>
+
+        <div class="card">
+            <h3>Construção</h3>
+            <p>Do zero ao acabamento final. Tudo com responsabilidade.</p>
+        </div>
+    </div>
+</section>
+
+<section class="section">
+    <h2>Contato</h2>
+    <p>📞 WhatsApp: <strong>1194873494</strong></p>
+    <p>📧 Email: <strong>almeidarebuild@gmail.com</strong></p>
+</section>
+
+<footer>
+    © 2026 Almeida Rebuild - Todos os direitos reservados.
+</footer>
+
+</body>
+</html>
