--- a/index.html
+++ b/index.html
@@ -4,152 +4,174 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Almeida Rebuild - Reformas & Construção</title>
-
     <style>
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background: #111;
+            background: #000;
             color: #fff;
         }
 
         header {
             background: #000;
-            padding: 20px;
+            padding: 25px;
             text-align: center;
-            font-size: 26px;
-            font-weight: bold;
-            letter-spacing: 2px;
-            animation: fadeIn 2s ease-in-out;
+            border-bottom: 2px solid #d4af37;
         }
 
-        .hero {
+        header h1 {
+            margin: 0;
+            font-size: 2.6rem;
+            color: #d4af37;
+            letter-spacing: 1px;
+        }
+
+        header p {
+            font-size: 1.2rem;
+            color: #fff;
+        }
+
+        nav {
             text-align: center;
-            padding: 60px 20px;
-            background: #1a1a1a;
-            animation: slideDown 1.5s ease;
+            background: #111;
+            padding: 15px 0;
+            border-bottom: 1px solid #333;
         }
 
-        .hero h1 {
-            font-size: 40px;
-            margin-bottom: 10px;
-        }
-
-        .hero p {
-            font-size: 18px;
-            color: #ccc;
-        }
-
-        .btn {
-            margin-top: 20px;
-            background: white;
-            color: black;
-            padding: 12px 25px;
-            border-radius: 5px;
+        nav a {
+            margin: 0 15px;
+            color: #d4af37;
             text-decoration: none;
             font-weight: bold;
-            display: inline-block;
-            animation: pulse 2s infinite;
+            font-size: 1.1rem;
         }
 
-        .section {
-            padding: 40px 20px;
+        section {
+            padding: 50px 20px;
+            max-width: 900px;
+            margin: auto;
+        }
+
+        h2 {
+            color: #d4af37;
             text-align: center;
+            font-size: 2rem;
+            margin-bottom: 25px;
         }
 
-        .services {
+        .servicos-lista {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(auto-fit,minmax(260px,1fr));
             gap: 20px;
-            margin-top: 20px;
         }
 
         .card {
-            background: #1f1f1f;
+            background: #111;
+            border: 1px solid #d4af37;
             padding: 20px;
             border-radius: 10px;
-            transition: 0.3s;
-            animation: fadeIn 1.5s ease;
         }
 
-        .card:hover {
-            transform: scale(1.05);
+        .card h3 {
+            color: #d4af37;
+            margin-top: 0;
+        }
+
+        .btn-whats {
+            display: block;
+            margin: 40px auto;
+            background: #25D366;
+            color: #000;
+            padding: 15px 25px;
+            border-radius: 8px;
+            width: fit-content;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 1.2rem;
         }
 
         footer {
-            margin-top: 40px;
             text-align: center;
-            padding: 20px;
+            padding: 30px;
+            margin-top: 40px;
+            border-top: 1px solid #d4af37;
+            color: #d4af37;
             background: #000;
-            color: #aaa;
-        }
-
-        /* ANIMAÇÕES */
-        @keyframes fadeIn {
-            from {opacity: 0;}
-            to {opacity: 1;}
-        }
-
-        @keyframes slideDown {
-            from {transform: translateY(-40px); opacity: 0;}
-            to {transform: translateY(0); opacity: 1;}
-        }
-
-        @keyframes pulse {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.07); }
-            100% { transform: scale(1); }
         }
     </style>
 </head>
+
 <body>
 
 <header>
-    ALMEIDA REBUILD
+    <h1>Almeida Rebuild</h1>
+    <p>Transformando sua casa com qualidade e confiança</p>
 </header>
 
-<section class="hero">
-    <h1>Reformas, Construção e Acabamento</h1>
-    <p>Profissionalismo, qualidade e confiança para transformar seu lar.</p>
-    <a class="btn" href="https://wa.me/11948735494" target="_blank">
-        Solicitar Orçamento
-    </a>
+<nav>
+    <a href="#sobre">Sobre</a>
+    <a href="#servicos">Serviços</a>
+    <a href="#contato">Contato</a>
+</nav>
+
+<section id="sobre">
+    <h2>Sobre Nós</h2>
+    <p>
+        A Almeida Rebuild é especializada em reformas residenciais e comerciais,
+        oferecendo serviços com qualidade, comprometimento e transparência.
+        Cada projeto é realizado com atenção aos detalhes, garantindo a satisfação
+        total dos nossos clientes.
+    </p>
 </section>
 
-<section class="section">
+<section id="servicos">
     <h2>Nossos Serviços</h2>
 
-    <div class="services">
+    <div class="servicos-lista">
+
         <div class="card">
-            <h3>Reformas em Geral</h3>
-            <p>Transformamos qualquer ambiente com qualidade e eficiência.</p>
+            <h3>Reformas Completas</h3>
+            <p>Do início ao fim, entregamos um serviço premium com acabamento impecável.</p>
         </div>
 
         <div class="card">
-            <h3>Pintura</h3>
-            <p>Trabalhamos com acabamento fino e pintura profissional.</p>
+            <h3>Pintura Profissional</h3>
+            <p>Pintura interna e externa com materiais de alta qualidade.</p>
+        </div>
+
+        <div class="card">
+            <h3>Drywall & Gesso</h3>
+            <p>Divisórias, sancas, forros e decoração moderna.</p>
         </div>
 
         <div class="card">
             <h3>Elétrica & Hidráulica</h3>
-            <p>Serviços técnicos com segurança e garantia.</p>
+            <p>Manutenções, instalações e revisões completas.</p>
         </div>
 
         <div class="card">
-            <h3>Construção</h3>
-            <p>Do zero ao acabamento final. Tudo com responsabilidade.</p>
+            <h3>Acabamento Fino</h3>
+            <p>Detalhes que elevam o padrão visual da sua casa.</p>
         </div>
+
     </div>
 </section>
 
-<section class="section">
+<section id="contato">
     <h2>Contato</h2>
-    <p>📞 WhatsApp: <strong>1194873494</strong></p>
-    <p>📧 Email: <strong>almeidarebuild@gmail.com</strong></p>
+    <p style="text-align:center;">
+        Fale conosco pelo WhatsApp e faça seu orçamento sem compromisso.
+    </p>
+
+    <a class="btn-whats" 
+       href="https://wa.me/5511948573494?text=Olá%20gostaria%20de%20um%20orçamento!" 
+       target="_blank">
+       📞 Falar no WhatsApp
+    </a>
 </section>
 
 <footer>
-    © 2026 Almeida Rebuild - Todos os direitos reservados.
+    Almeida Rebuild © 2026 — Todos os direitos reservados
 </footer>
 
 </body>
