--- a/index.html
+++ b/index.html
@@ -1,4 +1,60 @@
-<!-- HERO COM VÍDEO DE FUNDO -->
+<!-- ======= INÍCIO DO HERO COM VÍDEO ======= -->
+
+<style>
+/* HERO */
+.hero {
+    position: relative;
+    height: 90vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #fff;
+    overflow: hidden;
+}
+
+.hero-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -2;
+}
+
+.hero-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.55);
+    z-index: -1;
+}
+
+.hero-content {
+    position: relative;
+    z-index: 2;
+}
+
+.btn-whatsapp {
+    background: #d4af37;
+    padding: 12px 22px;
+    border-radius: 6px;
+    color: #000;
+    font-weight: bold;
+    display: inline-block;
+    margin-top: 15px;
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+.btn-whatsapp:hover {
+    background: #b8922b;
+}
+</style>
+
 <section class="hero">
     <video autoplay muted loop playsinline class="hero-video">
         <source src="video.mp4" type="video/mp4">
@@ -9,77 +65,11 @@
     <div class="hero-content">
         <h1>Almeida Rebuild</h1>
         <p>Transformando ambientes com qualidade, elegância e compromisso.</p>
+
         <a class="btn-whatsapp" href="https://wa.me/5511948573494" target="_blank">
             Solicitar Orçamento
         </a>
     </div>
 </section>
 
-<style>
-/* HERO */
-.hero {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-}
-
-.hero-video {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    top: 0;
-    left: 0;
-    z-index: 1;
-}
-
-.hero-overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.55); /* Escurece o vídeo */
-    top: 0;
-    left: 0;
-    z-index: 2;
-}
-
-.hero-content {
-    position: relative;
-    z-index: 3;
-    text-align: center;
-    top: 50%;
-    transform: translateY(-50%);
-    color: white;
-    padding: 0 20px;
-}
-
-.hero-content h1 {
-    font-size: 3.2rem;
-    font-weight: 800;
-    color: #d4af37; /* Dourado */
-    margin-bottom: 10px;
-}
-
-.hero-content p {
-    font-size: 1.3rem;
-    margin-bottom: 25px;
-}
-
-.btn-whatsapp {
-    display: inline-block;
-    padding: 14px 30px;
-    background: #d4af37; /* Dourado */
-    color: black;
-    border-radius: 8px;
-    text-decoration: none;
-    font-size: 1.1rem;
-    font-weight: 700;
-    transition: 0.3s;
-}
-
-.btn-whatsapp:hover {
-    background: white;
-    color: black;
-}
-</style>
+<!-- ======= FIM DO HERO ======= -->
