--- a/index.html
+++ b/index.html
@@ -1,75 +1,224 @@
-<!-- ======= INÍCIO DO HERO COM VÍDEO ======= -->
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Almeida Rebuild</title>
+    <style>
 
-<style>
-/* HERO */
-.hero {
-    position: relative;
-    height: 90vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: #fff;
-    overflow: hidden;
-}
+        /* ------------------- GERAL ------------------- */
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            color: #fff;
+            background: #000;
+        }
 
-.hero-video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -2;
-}
+        h1, h2 {
+            color: #d4af37;
+            letter-spacing: 1px;
+        }
 
-.hero-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.55);
-    z-index: -1;
-}
+        section {
+            padding: 60px 20px;
+            text-align: center;
+        }
 
-.hero-content {
-    position: relative;
-    z-index: 2;
-}
+        /* ------------------- HERO ------------------- */
+        .hero {
+            position: relative;
+            height: 90vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            overflow: hidden;
+            color: white;
+        }
 
-.btn-whatsapp {
-    background: #d4af37;
-    padding: 12px 22px;
-    border-radius: 6px;
-    color: #000;
-    font-weight: bold;
-    display: inline-block;
-    margin-top: 15px;
-    text-decoration: none;
-    transition: 0.3s;
-}
+        .hero video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -2;
+        }
 
-.btn-whatsapp:hover {
-    background: #b8922b;
-}
-</style>
+        .hero-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,0.55);
+            z-index: -1;
+        }
 
-<section class="hero">
-    <video autoplay muted loop playsinline class="hero-video">
-        <source src="video.mp4" type="video/mp4">
-    </video>
+        .btn-whatsapp {
+            background: #d4af37;
+            padding: 12px 24px;
+            border-radius: 6px;
+            color: #000;
+            font-weight: bold;
+            display: inline-block;
+            margin-top: 20px;
+            text-decoration: none;
+            transition: 0.3s;
+        }
 
-    <div class="hero-overlay"></div>
+        .btn-whatsapp:hover {
+            background: #b8922b;
+        }
 
-    <div class="hero-content">
-        <h1>Almeida Rebuild</h1>
-        <p>Transformando ambientes com qualidade, elegância e compromisso.</p>
+        /* ------------------- SOBRE ------------------- */
+        .sobre {
+            background: #111;
+            font-size: 18px;
+            line-height: 1.7;
+        }
+
+        /* ------------------- SERVIÇOS ------------------- */
+        .servicos {
+            background: #000;
+        }
+
+        .servicos-lista {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+            gap: 20px;
+            margin-top: 30px;
+        }
+
+        .servico-item {
+            background: #111;
+            padding: 20px;
+            border-radius: 10px;
+            border: 1px solid #333;
+            transition: 0.3s;
+        }
+
+        .servico-item:hover {
+            transform: translateY(-5px);
+            border-color: #d4af37;
+        }
+
+        /* ------------------- GALERIA ------------------- */
+        .galeria {
+            background: #111;
+        }
+
+        .galeria-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+            gap: 15px;
+            margin-top: 30px;
+        }
+
+        .galeria-grid img {
+            width: 100%;
+            border-radius: 10px;
+            border: 2px solid #222;
+            transition: 0.3s;
+        }
+
+        .galeria-grid img:hover {
+            transform: scale(1.03);
+            border-color: #d4af37;
+        }
+
+        /* ------------------- CONTATO ------------------- */
+        .contato {
+            background: #000;
+            padding-bottom: 80px;
+        }
+
+        /* ------------------- RODAPÉ ------------------- */
+        footer {
+            background: #000;
+            padding: 20px;
+            text-align: center;
+            color: #777;
+            font-size: 14px;
+            border-top: 1px solid #222;
+        }
+
+    </style>
+</head>
+<body>
+
+    <!-- ------------------- HERO ------------------- -->
+    <section class="hero">
+        <video autoplay muted loop playsinline>
+            <source src="video.mp4" type="video/mp4">
+        </video>
+
+        <div class="hero-overlay"></div>
+
+        <div class="hero-content">
+            <h1>Almeida Rebuild</h1>
+            <p>Transformando ambientes com qualidade, elegância e compromisso.</p>
+
+            <a class="btn-whatsapp" href="https://wa.me/5511948573494" target="_blank">
+                Solicitar Orçamento
+            </a>
+        </div>
+    </section>
+
+    <!-- ------------------- SOBRE ------------------- -->
+    <section class="sobre">
+        <h2>Sobre Nós</h2>
+        <p>
+            A Almeida Rebuild é especializada em reformas residenciais e comerciais, oferecendo
+            resultados de alto padrão com comprometimento, pontualidade e acabamento impecável.
+        </p>
+    </section>
+
+    <!-- ------------------- SERVIÇOS ------------------- -->
+    <section class="servicos">
+        <h2>Nossos Serviços</h2>
+
+        <div class="servicos-lista">
+            <div class="servico-item">Pintura Geral</div>
+            <div class="servico-item">Drywall e Forro</div>
+            <div class="servico-item">Pisos e Revestimentos</div>
+            <div class="servico-item">Reformas completas</div>
+            <div class="servico-item">Acabamentos finos</div>
+            <div class="servico-item">Manutenções</div>
+        </div>
+    </section>
+
+    <!-- ------------------- GALERIA ------------------- -->
+    <section class="galeria">
+        <h2>Galeria de Projetos</h2>
+
+        <div class="galeria-grid">
+            <img src="foto1.jpg">
+            <img src="foto2.jpg">
+            <img src="foto3.jpg">
+            <img src="foto4.jpg">
+            <img src="foto5.jpg">
+            <img src="foto6.jpg">
+            <img src="foto7.jpg">
+            <img src="foto8.jpg">
+        </div>
+    </section>
+
+    <!-- ------------------- CONTATO ------------------- -->
+    <section class="contato">
+        <h2>Contato</h2>
+        <p>Pronto para transformar seu ambiente?</p>
 
         <a class="btn-whatsapp" href="https://wa.me/5511948573494" target="_blank">
-            Solicitar Orçamento
+            Chamar no WhatsApp
         </a>
-    </div>
-</section>
+    </section>
 
-<!-- ======= FIM DO HERO ======= -->
+    <!-- ------------------- RODAPÉ ------------------- -->
+    <footer>
+        Almeida Rebuild © 2026 — Qualidade e compromisso em cada detalhe.
+    </footer>
+
+</body>
+</html>
