--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Almeida Rebuild</title>
-    <style>
 
-        /* ------------------- GERAL ------------------- */
+    <!-- Ícones Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
+    <style>
+        /* ----------------------- GERAL ----------------------- */
         body {
             margin: 0;
             font-family: Arial, sans-serif;
@@ -24,16 +27,16 @@
             text-align: center;
         }
 
-        /* ------------------- HERO ------------------- */
+        /* ----------------------- HERO ----------------------- */
         .hero {
             position: relative;
-            height: 90vh;
+            height: 100vh;
             display: flex;
-            align-items: center;
             justify-content: center;
+            align-items: center;
+            color: white;
             text-align: center;
             overflow: hidden;
-            color: white;
         }
 
         .hero video {
@@ -43,181 +46,125 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            z-index: -2;
-        }
-
-        .hero-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0,0,0,0.55);
             z-index: -1;
+            filter: brightness(0.4);
         }
 
-        .btn-whatsapp {
-            background: #d4af37;
-            padding: 12px 24px;
-            border-radius: 6px;
-            color: #000;
-            font-weight: bold;
-            display: inline-block;
-            margin-top: 20px;
-            text-decoration: none;
-            transition: 0.3s;
+        .hero-content h1 {
+            font-size: 48px;
+            margin-bottom: 10px;
         }
 
-        .btn-whatsapp:hover {
-            background: #b8922b;
-        }
-
-        /* ------------------- SOBRE ------------------- */
-        .sobre {
-            background: #111;
+        .hero-content p {
             font-size: 18px;
-            line-height: 1.7;
+            margin-bottom: 20px;
         }
 
-        /* ------------------- SERVIÇOS ------------------- */
-        .servicos {
-            background: #000;
+        .btn-primary {
+            display: inline-block;
+            padding: 12px 25px;
+            background: #d4af37;
+            color: black;
+            text-decoration: none;
+            font-weight: bold;
+            border-radius: 5px;
         }
 
-        .servicos-lista {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-            gap: 20px;
-            margin-top: 30px;
+        /* ----------------------- SERVIÇOS ----------------------- */
+        .services-container {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            flex-wrap: wrap;
         }
 
-        .servico-item {
-            background: #111;
+        .service-box {
+            width: 250px;
             padding: 20px;
-            border-radius: 10px;
-            border: 1px solid #333;
-            transition: 0.3s;
-        }
-
-        .servico-item:hover {
-            transform: translateY(-5px);
-            border-color: #d4af37;
-        }
-
-        /* ------------------- GALERIA ------------------- */
-        .galeria {
             background: #111;
-        }
-
-        .galeria-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-            gap: 15px;
-            margin-top: 30px;
-        }
-
-        .galeria-grid img {
-            width: 100%;
             border-radius: 10px;
-            border: 2px solid #222;
-            transition: 0.3s;
+            border: 1px solid #d4af37;
         }
 
-        .galeria-grid img:hover {
-            transform: scale(1.03);
-            border-color: #d4af37;
+        .service-box i {
+            font-size: 40px;
+            color: #d4af37;
+            margin-bottom: 15px;
         }
 
-        /* ------------------- CONTATO ------------------- */
-        .contato {
-            background: #000;
-            padding-bottom: 80px;
+        /* ----------------------- CONTATO ----------------------- */
+        .contact-info p {
+            font-size: 18px;
+            margin: 10px 0;
         }
 
-        /* ------------------- RODAPÉ ------------------- */
+        .contact-info i {
+            color: #d4af37;
+            margin-right: 10px;
+        }
+
+        /* ----------------------- RODAPÉ ----------------------- */
         footer {
-            background: #000;
-            padding: 20px;
             text-align: center;
-            color: #777;
-            font-size: 14px;
-            border-top: 1px solid #222;
+            padding: 20px;
+            background: #111;
+            color: #fff;
+            border-top: 1px solid #d4af37;
         }
-
     </style>
 </head>
+
 <body>
 
-    <!-- ------------------- HERO ------------------- -->
+    <!-- HERO -->
     <section class="hero">
-        <video autoplay muted loop playsinline>
+        <video autoplay muted loop>
             <source src="video.mp4" type="video/mp4">
         </video>
-
-        <div class="hero-overlay"></div>
 
         <div class="hero-content">
             <h1>Almeida Rebuild</h1>
             <p>Transformando ambientes com qualidade, elegância e compromisso.</p>
-
-            <a class="btn-whatsapp" href="https://wa.me/5511948573494" target="_blank">
-                Solicitar Orçamento
-            </a>
+            <a href="#contato" class="btn-primary">Solicitar Orçamento</a>
         </div>
     </section>
 
-    <!-- ------------------- SOBRE ------------------- -->
-    <section class="sobre">
-        <h2>Sobre Nós</h2>
-        <p>
-            A Almeida Rebuild é especializada em reformas residenciais e comerciais, oferecendo
-            resultados de alto padrão com comprometimento, pontualidade e acabamento impecável.
-        </p>
-    </section>
+    <!-- SERVIÇOS -->
+    <section id="servicos">
+        <h2>Serviços</h2>
+        <div class="services-container">
+            <div class="service-box">
+                <i class="bi bi-hammer"></i>
+                <h3>Reformas</h3>
+                <p>Melhorias completas para sua casa ou empresa.</p>
+            </div>
 
-    <!-- ------------------- SERVIÇOS ------------------- -->
-    <section class="servicos">
-        <h2>Nossos Serviços</h2>
+            <div class="service-box">
+                <i class="bi bi-bricks"></i>
+                <h3>Alvenaria</h3>
+                <p>Construção e reparos estruturais com qualidade.</p>
+            </div>
 
-        <div class="servicos-lista">
-            <div class="servico-item">Pintura Geral</div>
-            <div class="servico-item">Drywall e Forro</div>
-            <div class="servico-item">Pisos e Revestimentos</div>
-            <div class="servico-item">Reformas completas</div>
-            <div class="servico-item">Acabamentos finos</div>
-            <div class="servico-item">Manutenções</div>
+            <div class="service-box">
+                <i class="bi bi-paint-bucket"></i>
+                <h3>Pintura</h3>
+                <p>Acabamento fino e moderno para seus ambientes.</p>
+            </div>
         </div>
     </section>
 
-    <!-- ------------------- GALERIA ------------------- -->
-    <section class="galeria">
-        <h2>Galeria de Projetos</h2>
-
-        <div class="galeria-grid">
-            <img src="foto1.jpg">
-            <img src="foto2.jpg">
-            <img src="foto3.jpg">
-            <img src="foto4.jpg">
-            <img src="foto5.jpg">
-            <img src="foto6.jpg">
-            <img src="foto7.jpg">
-            <img src="foto8.jpg">
-        </div>
-    </section>
-
-    <!-- ------------------- CONTATO ------------------- -->
-    <section class="contato">
+    <!-- CONTATO -->
+    <section id="contato">
         <h2>Contato</h2>
-        <p>Pronto para transformar seu ambiente?</p>
-
-        <a class="btn-whatsapp" href="https://wa.me/5511948573494" target="_blank">
-            Chamar no WhatsApp
-        </a>
+        <div class="contact-info">
+            <p><i class="bi bi-telephone"></i> (XX) XXXX-XXXX</p>
+            <p><i class="bi bi-whatsapp"></i> (XX) XXXXX-XXXX</p>
+            <p><i class="bi bi-envelope"></i> email@almeida.com</p>
+        </div>
     </section>
 
-    <!-- ------------------- RODAPÉ ------------------- -->
     <footer>
-        Almeida Rebuild © 2026 — Qualidade e compromisso em cada detalhe.
+        © 2026 Almeida Rebuild — Todos os direitos reservados.
     </footer>
 
 </body>
