--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
     <style>
-        /* ----------------------- GERAL ----------------------- */
+        /* ------------------ RESET / GERAL ------------------ */
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            color: #fff;
             background: #000;
+            color: #fff;
         }
 
         h1, h2 {
@@ -27,142 +27,159 @@
             text-align: center;
         }
 
-        /* ----------------------- HERO ----------------------- */
+        /* ------------------ HERO ------------------ */
         .hero {
             position: relative;
-            height: 100vh;
+            height: 90vh;
             display: flex;
-            justify-content: center;
             align-items: center;
-            color: white;
+            justify-content: center;
             text-align: center;
-            overflow: hidden;
+            background: url('bj.jpeg') center/cover no-repeat;
         }
 
-        .hero video {
+        .hero-overlay {
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            z-index: -1;
-            filter: brightness(0.4);
+            inset: 0;
+            background: rgba(0,0,0,0.6);
         }
 
-        .hero-content h1 {
-            font-size: 48px;
-            margin-bottom: 10px;
+        .hero-content {
+            position: relative;
+            z-index: 2;
         }
 
-        .hero-content p {
-            font-size: 18px;
-            margin-bottom: 20px;
-        }
-
-        .btn-primary {
-            display: inline-block;
+        .btn {
+            background-color: #d4af37;
             padding: 12px 25px;
-            background: #d4af37;
-            color: black;
             text-decoration: none;
+            color: black;
             font-weight: bold;
             border-radius: 5px;
         }
 
-        /* ----------------------- SERVIÇOS ----------------------- */
-        .services-container {
+        /* ------------------ SERVIÇOS ------------------ */
+        .services {
             display: flex;
             justify-content: center;
-            gap: 30px;
+            gap: 40px;
             flex-wrap: wrap;
         }
 
-        .service-box {
+        .service-card {
             width: 250px;
             padding: 20px;
             background: #111;
             border-radius: 10px;
-            border: 1px solid #d4af37;
+            border: 1px solid #333;
         }
 
-        .service-box i {
+        .service-card i {
             font-size: 40px;
             color: #d4af37;
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
 
-        /* ----------------------- CONTATO ----------------------- */
-        .contact-info p {
-            font-size: 18px;
-            margin: 10px 0;
+        /* ------------------ GALERIA ------------------ */
+        .gallery {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
         }
 
-        .contact-info i {
+        .gallery img {
+            width: 300px;
+            height: 200px;
+            object-fit: cover;
+            border-radius: 10px;
+            border: 2px solid #d4af37;
+        }
+
+        /* ------------------ CONTATO ------------------ */
+        .contact a {
+            font-size: 25px;
             color: #d4af37;
-            margin-right: 10px;
+            margin: 10px;
+            display: inline-block;
         }
 
-        /* ----------------------- RODAPÉ ----------------------- */
+        /* ------------------ RODAPÉ ------------------ */
         footer {
-            text-align: center;
-            padding: 20px;
             background: #111;
-            color: #fff;
-            border-top: 1px solid #d4af37;
+            padding: 20px;
+            text-align: center;
+            color: #888;
         }
     </style>
 </head>
 
 <body>
 
-    <!-- HERO -->
-    <section class="hero">
-        <video autoplay muted loop>
-            <source src="video.mp4" type="video/mp4">
-        </video>
-
+    <!-- ================== HERO ================== -->
+    <div class="hero">
+        <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1>Almeida Rebuild</h1>
             <p>Transformando ambientes com qualidade, elegância e compromisso.</p>
-            <a href="#contato" class="btn-primary">Solicitar Orçamento</a>
+            <br>
+            <a href="#contato" class="btn">Solicitar Orçamento</a>
         </div>
-    </section>
+    </div>
 
-    <!-- SERVIÇOS -->
+    <!-- ================== SERVIÇOS ================== -->
     <section id="servicos">
         <h2>Serviços</h2>
-        <div class="services-container">
-            <div class="service-box">
+        <div class="services">
+            <div class="service-card">
                 <i class="bi bi-hammer"></i>
                 <h3>Reformas</h3>
-                <p>Melhorias completas para sua casa ou empresa.</p>
+                <p>Serviços completos de reforma para todos os tipos de ambientes.</p>
             </div>
 
-            <div class="service-box">
+            <div class="service-card">
                 <i class="bi bi-bricks"></i>
-                <h3>Alvenaria</h3>
-                <p>Construção e reparos estruturais com qualidade.</p>
+                <h3>Construção</h3>
+                <p>Execução com qualidade e uso dos melhores materiais.</p>
             </div>
 
-            <div class="service-box">
-                <i class="bi bi-paint-bucket"></i>
-                <h3>Pintura</h3>
-                <p>Acabamento fino e moderno para seus ambientes.</p>
+            <div class="service-card">
+                <i class="bi bi-wrench-adjustable-circle"></i>
+                <h3>Manutenções</h3>
+                <p>Manutenção preventiva e corretiva para sua casa ou empresa.</p>
             </div>
         </div>
     </section>
 
-    <!-- CONTATO -->
+    <!-- ================== GALERIA ================== -->
+    <section id="galeria">
+        <h2>Galeria de Projetos</h2>
+
+        <div class="gallery">
+            <img src="WhatsApp Image 2026-02-16 at 18.45.04.jpeg" alt="Projeto 1">
+            <img src="WhatsApp Image 2026-02-16 at 18.45.05.jpeg" alt="Projeto 2">
+            <img src="b.jpeg" alt="Projeto 3">
+            <img src="foto de trabalho.jpeg" alt="Projeto 4">
+        </div>
+    </section>
+
+    <!-- ================== CONTATO ================== -->
     <section id="contato">
         <h2>Contato</h2>
-        <div class="contact-info">
-            <p><i class="bi bi-telephone"></i> (XX) XXXX-XXXX</p>
-            <p><i class="bi bi-whatsapp"></i> (XX) XXXXX-XXXX</p>
-            <p><i class="bi bi-envelope"></i> email@almeida.com</p>
+        <p>Pronto para transformar seu ambiente?</p>
+
+        <div class="contact">
+            <a href="https://wa.me/55SEUNUMERO" target="_blank">
+                <i class="bi bi-whatsapp"></i>
+            </a>
+
+            <a href="mailto:seuemail@gmail.com">
+                <i class="bi bi-envelope"></i>
+            </a>
         </div>
     </section>
 
+    <!-- ================== FOOTER ================== -->
     <footer>
         © 2026 Almeida Rebuild — Todos os direitos reservados.
     </footer>
