--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Almeida Rebuild</title>
 
     <!-- Ícones Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
 
     <style>
         /* ------------------ RESET / GERAL ------------------ */
