--- a/index.html
+++ b/index.html
@@ -9,35 +9,41 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background: #000;
-            color: white;
-            background-image: url('b.jpeg');
+
+            /* FUNDO DO SITE (LOGO) */
+            background-image: url('logotipo.jpeg'); /* nome EXATO do arquivo */
+            background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
+
+            color: white;
+            background-color: #000;
         }
 
         header {
             text-align: center;
             padding: 40px 20px;
-            background: rgba(0,0,0,0.7);
+            background: rgba(0,0,0,0.75);
         }
 
         h1 {
             font-size: 38px;
             color: gold;
             margin: 0;
+            font-weight: bold;
         }
 
         h2 {
             color: gold;
             margin-top: 40px;
             text-align: center;
+            font-size: 26px;
         }
 
         .container {
             padding: 20px;
-            background: rgba(0,0,0,0.6);
+            background: rgba(0,0,0,0.7);
         }
 
         .gallery {
@@ -93,6 +99,7 @@
         <img src="WhatsApp Image 2026-02-16 at 18.45.04.jpeg" alt="Trabalho 2">
         <img src="WhatsApp Image 2026-02-16 at 18.45.05.jpeg" alt="Trabalho 3">
         <img src="t.jpeg" alt="Foto 4">
+        <img src="b.jpeg" alt="Foto 5">
     </div>
 
     <h2>Vídeo</h2>
