--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
         }
 
         .gallery img, .gallery video {
-            width: 300%;
-            border-radius: 10px;
-            border: 2px solid gold;
+    max-width: 300px;
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    display: block;
         }
 
         .whatsapp-button {
